--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.3
   http: ^0.12.2
+  flutter_signin_button: ^1.1.0
 
 dev_dependencies:
   flutter_test:
