--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   http: ^0.12.2
   flutter_signin_button: ^1.1.0
+  shared_preferences: '>=0.5.12 <2.0.0'
 
 dev_dependencies:
   flutter_test:
